CI: Add additional project approvers
Add @dlespiau and @grahamwhaley as additional project approvers.

Fixes #44.

Signed-off-by: James O. D. Hunt <james.o.hunt@intel.com>

--- a/.pullapprove.yml
+++ b/.pullapprove.yml
@@ -33,11 +33,13 @@ groups:
   approvers:
     required: 1
     users:
-      - sboeuf
-      - devimc
       - amshinde
+      - devimc
+      - dlespiau
+      - grahamwhaley
       - mcastelino
       - sameo
+      - sboeuf
 
   documentation:
     conditions:
