--- a/clear-containers.service.in
+++ b/clear-containers.service.in
@@ -1,10 +1,12 @@
 [Unit]
 Description=Clear Containers Agent
 Documentation=https://github.com/clearcontainers/agent
+Wants=clear-containers.target
 
 [Service]
+StandardOutput=tty
+Type=simple
 ExecStart=@bindir@/@ccagent@
 LimitNOFILE=infinity
-
-[Install]
-WantedBy=multi-user.target
+ExecStop=/bin/sync ; /usr/bin/systemctl --force poweroff
+FailureAction=poweroff
