pullapprove: Add a new approver
jcvenegas has been contributing quite a lot to this repo and he
knows the code pretty well. That's why I would like him to be
an approver on this repo.

Fixes #155

Signed-off-by: Sebastien Boeuf <sebastien.boeuf@intel.com>

--- a/.pullapprove.yml
+++ b/.pullapprove.yml
@@ -36,6 +36,7 @@ groups:
       - amshinde
       - devimc
       - grahamwhaley
+      - jcvenegas
       - mcastelino
       - sameo
       - sboeuf
